<resources>
    <string name="app_name">Solusi Negeri Merchant</string>
    <string name="splash_loading">Memuat aplikasi...</string>
    <string name="splash_checking_login">Memeriksa status login...</string>
    <string name="label_pilih_instansi">Pilih Instansi</string>
    <string name="label_info_check_Inital">Silakan masukkan kode instansi untuk melanjutkan</string>
    <string name="label_input_instansi">Masukkan Kode Instansi</string>
    <string name="label_check">Cek Instansi</string>
    <string name="label_instansi">Instansi</string>
    <string name="label_initial">Kode Instansi</string>
    <string name="label_powered_by">Powered By</string>
    <string name="label_loading">Memuat...</string>
    <string name="label_success">Berhasil</string>
    <string name="label_error">Error</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Batal</string>
    <string name="label_close">Tutup</string>
    <string name="label_retry">Coba Lagi</string>
    <string name="label_continue">Lanjutkan</string>
    <string name="error_network">Koneksi internet bermasalah</string>
    <string name="error_server">Server sedang bermasalah</string>
    <string name="error_unknown">Terjadi kesalahan yang tidak diketahui</string>
    <string name="error_instansi_not_found">Instansi tidak ditemukan</string>
    <string name="error_instansi_invalid">Kode instansi tidak valid</string>
    <string name="error_empty_field">Field tidak boleh kosong</string>
    <string name="success_instansi_found">Instansi ditemukan</string>
    <string name="success_login">Login berhasil</string>
    <string name="success_logout">Logout berhasil</string>
    <string name="validation_required">Field ini wajib diisi</string>
    <string name="validation_min_length">Minimal %1$d karakter</string>
    <string name="validation_max_length">Maksimal %1$d karakter</string>
    <string name="validation_invalid_format">Format tidak valid</string>
    <string name="placeholder_instansi_code">Masukkan kode instansi</string>
    <string name="placeholder_search">Cari...</string>
    <string name="label_username">Username/Email</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_lupa_kata_sandi">Lupa Kata Sandi</string>
    <string name="login_help_text">Butuh bantuan masuk? Silahkan hubungi</string>
    <string name="login_help_service"><u>Layanan Bantuan</u></string>
    <string name="version">Version 1.0.0</string>
    <string name="action_login">Masuk</string>
    <string name="action_logout">Keluar</string>
    <string name="action_register">Daftar</string>
    <string name="action_forgot_password">Lupa Password ?</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="action_save">Simpan</string>
    <string name="action_delete">Hapus</string>
    <string name="action_edit">Edit</string>
    <string name="action_add">Tambah</string>
    <string name="action_search">Cari</string>
    <string name="action_filter">Filter</string>
    <string name="action_sort">Urutkan</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_back">Kembali</string>
    <string name="action_next">Selanjutnya</string>
    <string name="action_finish">Selesai</string>
    <string name="action_skip">Lewati</string>
    <string name="action_confirm">Konfirmasi</string>
    <string name="nav_home">Beranda</string>
    <string name="nav_profile">Profil</string>
    <string name="nav_settings">Pengaturan</string>
    <string name="nav_help">Bantuan</string>
    <string name="nav_about">Tentang</string>
    <string name="status_online">Online</string>
    <string name="status_offline">Offline</string>
    <string name="status_connecting">Menghubungkan...</string>
    <string name="status_connected">Terhubung</string>
    <string name="status_disconnected">Terputus</string>
    <string name="time_just_now">Baru saja</string>
    <string name="time_minutes_ago">%1$d menit yang lalu</string>
    <string name="time_hours_ago">%1$d jam yang lalu</string>
    <string name="time_days_ago">%1$d hari yang lalu</string>
    <string name="time_weeks_ago">%1$d minggu yang lalu</string>
    <string name="time_months_ago">%1$d bulan yang lalu</string>
    <string name="time_years_ago">%1$d tahun yang lalu</string>
    <string name="chucker_debug">Network Debug</string>
    <string name="chucker_open">Buka Network Inspector</string>
    <string name="chucker_not_available">Chucker tidak tersedia di release build</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="label_saldo">Saldo</string>
    <string name="label_isi_saldo">Isi Saldo</string>
    <string name="label_tarik_saldo">Tarik Saldo</string>
    <string name="label_fitur_utama">Fitur Utama</string>
    <string name="label_statistik">Statistik</string>
    <string name="label_pemasukan">Pemasukan</string>
    <string name="label_penghasilan">Penghasilan</string>
    <string name="label_pengeluaran">Pengeluaran</string>
    <string name="label_transaksi">Transaksi</string>
    <string name="label_info_berita">Info &amp; Berita</string>
    <string name="label_lihat_detail">Lihat Detail</string>
    <string name="label_lihat_semua">Lihat Semua</string>
    <string name="label_fitur_desc">Akses fitur-fitur merchant dengan mudah</string>
    <string name="placeholder_balance">Rp 0</string>
    <string name="placeholder_amount">Rp 0</string>
    <string name="placeholder_percentage">0%</string>
    <string name="placeholder_count">0</string>
    <string name="placeholder_email">example_email@email.co</string>
    <string name="placeholder_name">Placeholder User</string>
    <string name="placeholder_user_id">0</string>
    <string name="placeholder_phone">08xx-xxxx-xxxx</string>
    <string name="placeholder_address">321 Example road</string>
    <string name="placeholder_b_loc">321 Example road</string>
    <string name="placeholder_menu_title">Menu Item</string>
    <string name="placeholder_news_title">Judul Berita</string>
    <string name="placeholder_news_desc">Deskripsi berita singkat...</string>
    <string name="balance_code">balanceCode</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="search">Search</string>
    <string name="loading">Loading</string>
    <string name="news">Berita</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="edit_password">Ganti Password</string>
    <string name="transaction_detail">Detail Transaksi</string>
    <string name="title_analytics">Statistik</string>
    <string name="hide_balance">Hide</string>
    <string name="show_balance">Show</string>
    <string name="something_went_wrong">Terjadi kesalahan, coba lagi nanti</string>
    <string name="news_detail_not_found">Detail berita tidak ditemukan</string>
    <string name="no_content_available">Konten belum tersedia</string>
    <string name="profile_edit_name_item"    >Nama Merchant</string>
    <string name="profile_edit_id_item"      >Nomor ID</string>
    <string name="profile_edit_email_item"   >Email</string>
    <string name="profile_edit_phone_item"   >Telepon</string>
    <string name="profile_edit_address_item" >Alamat</string>
    <string name="profile_edit_b_day_item"   >Tanggal Lahir</string>
    <string name="profile_edit_b_loc_item"   >Tempat Lahir</string>
    <string name="profile_edit_gender_item"  >Jenis Kelamin</string>
    <string name="profile_edit_gender_female">Perempuan</string>
    <string name="profile_edit_gender_male"  >Laki - Laki</string>
    <string name="profile_edit_photo"        >Ganti Foto</string>
    <string name="profile_edit_remove_photo" >Hapus Foto</string>
    <string name="Pin_name">Pin</string>
    <string name="password_edit_description" >Masukan data yang diperlukan untuk mengganti PIN anda</string>
    <string name="password_edit_confirm_item">Konfirmasi Password Baru</string>
    <string name="password_edit_old_item"    >Password Lama</string>
    <string name="password_edit_new_item"    >Password Baru</string>
    <string name="by_name_format">Oleh: %1$s</string>
    <string name="news_image">Gambar Berita</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="logout">Logout</string>
</resources>