<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.menu.profiles.PasswordEditActivity">

    <include
        layout="@layout/component_toolbar"
        android:id="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf    ="parent"
        app:layout_constraintEnd_toEndOf    ="parent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_height="0dp"
        android:layout_width ="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf   ="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_12sdp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width ="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textStyle="bold"
                android:text="@string/edit_password"
                style="@style/TextAppearance.Material3.TitleLarge"/>
            <TextView
                android:layout_width ="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_edit_description"
                android:layout_marginBottom="@dimen/_12sdp"
                style="@style/TextAppearance.Material3.ActionBar.Subtitle"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edbxOld"
                android:layout_height="wrap_content"
                android:layout_width ="match_parent"
                android:hint         ="@string/password_edit_old_item"

                app:boxCornerRadiusBottomStart="@dimen/_12sdp"
                app:boxCornerRadiusBottomEnd  ="@dimen/_12sdp"
                app:boxCornerRadiusTopStart   ="@dimen/_12sdp"
                app:boxCornerRadiusTopEnd     ="@dimen/_12sdp"

                app:boxBackgroundColor       ="@color/white_dynamic"
                app:hintTextColor            ="@color/black"
                android:layout_marginVertical="@dimen/_12sdp"

                app:passwordToggleEnabled="true"
                app:passwordToggleTint   ="@color/primary_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edOld"
                    android:layout_height="@dimen/_56sdp"
                    android:layout_width ="match_parent"
                    android:singleLine   ="true"
                    android:inputType    ="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edbxNew"
                android:layout_height="wrap_content"
                android:layout_width ="match_parent"
                android:hint         ="@string/password_edit_new_item"

                app:boxCornerRadiusBottomStart="@dimen/_12sdp"
                app:boxCornerRadiusBottomEnd  ="@dimen/_12sdp"
                app:boxCornerRadiusTopStart   ="@dimen/_12sdp"
                app:boxCornerRadiusTopEnd     ="@dimen/_12sdp"

                app:boxBackgroundColor        ="@color/white_dynamic"
                app:hintTextColor             ="@color/black"
                android:layout_marginVertical ="@dimen/_12sdp"

                app:passwordToggleEnabled="true"
                app:passwordToggleTint   ="@color/primary_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edNew"
                    android:layout_height="@dimen/_56sdp"
                    android:layout_width ="match_parent"
                    android:singleLine   ="true"
                    android:inputType    ="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edbxConfirm"
                android:layout_height="wrap_content"
                android:layout_width ="match_parent"
                android:hint         ="@string/password_edit_confirm_item"

                app:boxCornerRadiusBottomStart="@dimen/_12sdp"
                app:boxCornerRadiusBottomEnd  ="@dimen/_12sdp"
                app:boxCornerRadiusTopStart   ="@dimen/_12sdp"
                app:boxCornerRadiusTopEnd     ="@dimen/_12sdp"

                app:boxBackgroundColor        ="@color/white_dynamic"
                app:hintTextColor             ="@color/black"
                android:layout_marginVertical ="@dimen/_12sdp"

                app:passwordToggleEnabled="true"
                app:passwordToggleTint   ="@color/primary_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edConfirm"
                    android:layout_height="@dimen/_56sdp"
                    android:layout_width ="match_parent"
                    android:singleLine   ="true"
                    android:inputType    ="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- Confirm Button -->
    <com.solusinegeri.merchant3.presentation.component.button.SmartButton
        android:id="@+id/btnEditPassword"
        android:layout_height="@dimen/_56sdp"
        android:layout_width ="0dp"
        android:layout_margin="@dimen/_16sdp"
        android:textAllCaps  ="false"
        android:textStyle    ="bold"
        android:textColor    ="@color/white_dynamic"
        android:textSize     ="@dimen/text_size_large"
        android:text         ="@string/action_confirm"

        app:backgroundTint="@color/colorPrimaryGreen_dynamic"
        app:cornerRadius  ="@dimen/_12sdp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf      ="parent"
        app:layout_constraintStart_toStartOf  ="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>