<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.menu.profiles.ProfileEditActivity">

    <include
        layout="@layout/component_toolbar"
        android:id="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf    ="parent"
        app:layout_constraintEnd_toEndOf    ="parent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_height="0dp"
        android:layout_width ="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_edit_profile"
        app:layout_constraintTop_toBottomOf   ="@id/toolbar">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width ="match_parent"
            android:orientation  ="vertical"
            android:gravity      ="center">

            <ImageView
                android:id="@+id/ADD_IMAGE"
                android:layout_height="@dimen/_200sdp"
                android:layout_width ="@dimen/_200sdp"
                android:scaleType    ="centerCrop"
                android:src          ="@drawable/ic_profile_placeholder"
                tools:ignore="ContentDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_profile_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true"
                android:scrollbars="vertical"
                android:fadeScrollbars="true"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_box_birthdate"
                android:layout_height="wrap_content"
                android:layout_width ="match_parent"
                android:visibility   ="invisible"
                android:hint         ="@string/profile_edit_b_day_item"

                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginVertical  ="@dimen/_12sdp"

                app:boxCornerRadiusBottomStart="@dimen/_12sdp"
                app:boxCornerRadiusBottomEnd  ="@dimen/_12sdp"
                app:boxCornerRadiusTopStart   ="@dimen/_12sdp"
                app:boxCornerRadiusTopEnd     ="@dimen/_12sdp"

                app:boxBackgroundColor="@color/white_dynamic"
                app:hintTextColor     ="@color/black"
                app:endIconMode       ="custom"
                app:endIconDrawable   ="@drawable/calendernew">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_edit_birthdate"
                    android:layout_height="@dimen/_56sdp"
                    android:layout_width ="match_parent"
                    android:singleLine   ="true"
                    android:focusable    ="false"
                    android:textColor    ="@color/color_dark_gray"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginVertical="@dimen/_12sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_edit_gender_item"/>
                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_height="wrap_content"
                    android:layout_width ="match_parent">
                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_4sdp"

                        android:text="@string/profile_edit_gender_female"/>
                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_4sdp"
                        android:text="@string/profile_edit_gender_male"/>
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Save Button -->
    <com.solusinegeri.merchant3.presentation.component.button.SmartButton
        android:id="@+id/btn_edit_profile"
        android:layout_width="0dp"
        android:layout_height="@dimen/_56sdp"
        android:layout_margin="@dimen/_16sdp"
        android:text="@string/action_save"
        android:textAllCaps="false"
        android:textColor="@color/white_dynamic"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimaryGreen_dynamic"
        app:cornerRadius="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>